--- a/main.rs.tmpl
+++ b/main.rs.tmpl
@@ -1,7 +1,35 @@
 use std::fs::read_to_string;
 
+fn solution_1(input: &str) -> i32 {
+	0
+}
+
+fn solution_2(input: &str) -> i32 {
+	0
+}
+
 fn main() {
-    // let filepath = "./input"
-    let filepath = "./example";
-    let lines = read_to_string(filepath).unwrap().lines().map(|line| line);
+    let input = read_to_string("./input").unwrap();
+
+    println!("solution 1: {}", solution_1(&input));
+    println!("solution 2: {}", solution_2(&input));
+}
+
+#[cfg(test)]
+mod tests {
+    use super::*;
+
+    #[test]
+    fn test_solution_1() {
+        let input = read_to_string("./example").unwrap();
+        let result = solution_1(&input);
+        assert_eq!(result, 0);
+    }
+
+    #[test]
+    fn test_solution_2() {
+        let input = read_to_string("./example").unwrap();
+        let result = solution_2(&input);
+        assert_eq!(result, 0);
+    }
 }
